microoptimizations and cleanup